--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -80,6 +80,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="BookstoreConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=SouthAfricanBookstore;Integrated Security=True;MultipleActiveResultSets=True;AttachDbFilename=|DataDirectory|SouthAfricanBookstore.mdf" providerName="System.Data.SqlClient" />
+    <add name="BookstoreConnection" connectionString="Server=tcp:connect2us-database.database.windows.net,1433;Initial Catalog=c2udb;Persist Security Info=False;User ID=IsaacTolu;Password=Praise@1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
