--- a/.github/workflows/main_connect2us.yml
+++ b/.github/workflows/main_connect2us.yml
@@ -27,13 +27,13 @@ jobs:
         run: dotnet build WebApplication1/WebApplication1.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish WebApplication1/WebApplication1.csproj -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish WebApplication1/WebApplication1.csproj -c Release -o "${{github.workspace}}/publish_output"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: ${{github.workspace}}/publish_output
 
   deploy:
     runs-on: windows-2022
