--- a/.github/workflows/main_connect2us.yml
+++ b/.github/workflows/main_connect2us.yml
@@ -23,6 +23,9 @@ jobs:
         with:
           dotnet-version: '8.x'
 
+      - name: Create publish directory
+        run: mkdir ${{github.workspace}}/publish_output
+
       - name: Build with dotnet
         run: dotnet build WebApplication1/WebApplication1.csproj --configuration Release
 
